New template created with unit tests.

--- a/template/csharp-http-command/root.csproj
+++ b/template/csharp-http-command/root.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="FunctionResultExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
