--- a/template/csharp-http-command/function/Function.WebApp/Properties/launchSettings.json
+++ b/template/csharp-http-command/function/Function.WebApp/Properties/launchSettings.json
@@ -6,7 +6,9 @@
       "dotnetRunMessages": "true",
       "applicationUrl": "http://localhost:6001",
       "environmentVariables": {
-        "EventStore_ConnectionString": "esdb://node1.eventstore:2111?tls=true&tlsVerifyCert=false"
+        "EventStore_ConnectionString": "esdb://node1.eventstore:2111?tls=true&tlsVerifyCert=false",
+        "EventStore_UserName": "admin",
+        "EventStore_Password": "changeit"
       }
     }
   }
